# scrapy_aliexpress

./: LICENSE  README.md  estudo_xpath.txt
scrapy_aliexpress/: pyproject.toml
scrapy_aliexpress/config/: config_urls.json
scrapy_aliexpress/scrapy/: ali.json  aliexpress_produtos.json  scrapy-aliexpress.py
