[tool.poetry]
name = "scrapy-aliexpress"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "scrapy_aliexpress"}]

[tool.poetry.dependencies]
python = "^3.11"
scrapy = "^2.9.0"
bs4 = "^0.0.1"
driver = "^0.1.0"
selenium = "^4.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
